Update encrypter not to use sun.misc classes. (#4)